SourceSpec
Earthquake source parameters from S-wave displacement spectra
(c) 2011-2012 Claudio Satriano <satriano@ipgp.fr>
(c) 2013-2014 Claudio Satriano <satriano@ipgp.fr>,
              Emanuela Matrullo <matrullo@geologie.ens.fr>,
              Agnès Chounet <chounet@ipgp.fr>
(c) 2015-2021 Claudio Satriano <satriano@ipgp.fr>


v1.2 - 2021-05-20
	- Use python-versioneer to manage version numbers

v1.1 - 2021-04-07
	- Bug fixes:
		- Accept band code "C" for broadband seismometers sampled at >=250 Hz
		- Require cartopy>=0.18 for compatibility with matplotlib>=3.3


v1.0 - 2021-03-03
	- Simplification of time window parameters:
		- an unique window length, "win_length", is used for time-domain S/N ratio
		  calculation and spectral analysis
		- the old parameters, "noise_win_length" and "s_win_length", are no more
		  supported and generate an error
	- Reorganized config file and improved inline documentation within the file
		- removed unused option: fc_0
		- removed "pre_filt" option
		- post-processing check on fc bounds has been removed
	- Option to specify non standard instrument codes (e.g., "L" for
	  acceleration)
	- Option to specify filter frequencies for local magnitude computation
	- Plotting improvements:
		- Show S/N ratio on trace plots
		- Show spectral S/N ratio on spectrum plots
		- Option to show/hide ignored traces/spectra (low S/N)
	- Bug fixes:
		- Pay attention to location code when building average spectra
		- Plotting: avoid overlapping traces with different location code
		- Plotting: avoid overlapping spectra with different location code


v0.9 - 2020-04-24
	- Support for QuakeML input and StationXML
	- Support for Python 3.5
	- Only compatible with ObsPy >= 1.1.0
	- Project reorganization:
		- Project renamed to SourceSpec
		- ssp_residuals renamed to source_residuals
		- New installable package (e.g., via pip)
	- Spectra are smoothed in log-freq (no more Konno-Ohmachi)
	- Inversion is performed in a log-freq space