@@ -126,6 +126,8 @@ bp_freqmax_broadb = float(default=40.0)
 
 # Spectral windowing frequencies for accelerometers and velocimeters (Hz)
 # (spectra will be cut between these two frequencies)
+# Use freq1_STATION and freq2_STATION to provide
+# windowing frequencies for a specific STATION code.
 freq1_acc     = float(default=1.0)
 freq2_acc     = float(default=30.0)
 freq1_shortp  = float(default=1.0)
